# little-man-compiler

./: .gitignore  CHANGELOG.md  cabal.project  little-man-compiler.cabal
app/: CodeGener.hs  Compiler.hs  Main.hs  Parser.hs  Resolver.hs
examples/: factorial.lmc
