cabal-version:      3.0
name:               little-man-compiler
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
-- author:
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable little-man-compiler
    import:           warnings
    main-is:          Main.hs
    other-modules:    Parser,
                      Compiler
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      ParserLib
    hs-source-dirs:   app
    default-language: Haskell2010
